--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         </tfoot>
         <tr>
-            <td>hope this is enough about me</td>
+            <td>now go away</td>
         </tr>
     </table> 
     <h3>Skills</h3>
